FIX : Landing page layout fixed for mobile view with alignment issue solved.

--- a/src/App.scss
+++ b/src/App.scss
@@ -17,16 +17,22 @@ body{
   background : white;
   
   h1{
-    font-size : clamp(0px, 4vh, 40px);
+    font-size : clamp(0px, 4vh, 50px);
   }
   
   h2{
-    font-size : clamp(0px, 3vh, 30px);
+    font-size : clamp(0px, 3vh, 40px);
   }
   h3{
-    font-size : clamp(15px, 2.5vh, 30px);
+    font-size : clamp(15px, 2.5vh, 40px);
   }
   #AboutMC, #ReturnSliderMC, #CalculatorMC, #InsightsMC, #PowMC, #FooterMC{
     padding : 60px 60px;
+  }
+}
+
+@include mediaDevice(mobile){
+  #AboutMC, #NavBar, #ReturnSliderMC, #CalculatorMC, #InsightsMC, #PowMC, #FooterMC{
+    margin-bottom: 50px;
   }
 }
