--- a/src/LandingPage/3.About/About.scss
+++ b/src/LandingPage/3.About/About.scss
@@ -11,14 +11,12 @@
   
   .AbPgOne, .AbPgTwo{
     display : flex;
+    width : 100%;
     flex-direction : column;
     justify-content : center;
     align-items : center;
     gap : 50px;
-    }
-  
-  .AbPgTwo{
-    height : 100vh;
+    min-height : 100vh;
   }
   
   
@@ -30,9 +28,8 @@
     font-size : 5vh;
   }
   .GridCon{
-    position : relative;
     height : auto;
-    width : auto;
+    width : 100%;
     display : grid;
     grid-template-columns : auto auto;
     grid-template-rows : auto;
@@ -40,7 +37,6 @@
     
     
     .Con{
-      position : relative;
       width : clamp(100px, 40vw, 500px);
       height : auto;
       display : grid;
@@ -50,11 +46,11 @@
       border-radius : 20px;
       
       
-       img{
-         width : 80%;
-         height : auto;
-         object-fit : contain;
-       }
+      img{
+        width : 80%;
+        height : auto;
+        object-fit : contain;
+      }
       
       h2{
         font-family : SyneMono;
@@ -98,15 +94,31 @@
 
 @include mediaDevice(mobile){
   #AboutMC{
-    padding : 20px;
+    padding : 2px 2px;
     
     .GridCon{
+      height : auto;
+      width : 100vw;
+      display : grid;
       grid-template-columns : 1fr;
-      grid-template-rows : auto;
+      grid-template-rows : 1fr;
+      place-items : center;
+      gap : 30px;
       .Con{
-        width : 100%;
-        height : auto;
-        aspect-ratio : auto;
+        width : 90vw;
+        display : grid;
+        padding : 0;
+        gap : 20px;
+        align-items : center;
+        justify-items : center;
+        border-radius : 20px;
+        
+        &.ACone{
+        }
+        
+        &.ACtwo{
+          width: 90vw;
+        }
       }
     }
   }
