--- a/src/LandingPage/7.POW/Pow.scss
+++ b/src/LandingPage/7.POW/Pow.scss
@@ -29,7 +29,7 @@
       text-align: center;
       font-weight: 400;
       margin: 0;
-      font-size : 40px;
+      font-size : clamp(0px, 5vh, 40px);
     }
     
     .contentRow {
@@ -98,10 +98,11 @@
           display: flex;
           flex-direction: column;
           gap: 24px;
+          padding : 0;
           
           .statementEE{
-            font-family: SyneMono;
-            font-size: 18px;
+            font-family: Genos;
+            font-size: clamp(0px, 2.5vh, 25px);
             line-height: 1.8;
             
             color: #4b5563;
@@ -112,7 +113,7 @@
           
           h2:not(.statementEE){
             font-family: Genos;
-            font-size: 38px;
+            font-size : clamp( 0px, 3vh, 30px);
             font-weight: 600;
             
             color: #111827;
@@ -120,9 +121,8 @@
           
           h3{
             font-family: Genos;
-            font-size: 18px;
+            font-size: clamp(0px, 2vh, 25px);
             font-weight: 500;
-            
             letter-spacing: 1px;
             text-transform: uppercase;
             
@@ -138,10 +138,10 @@
           gap: 20px;
           
           img {
-            width: 220px;
-            height: 220px;
+            width: 100%;
+            height: auto;
             
-            object-fit: cover;
+            object-fit: contain;
             
             border-radius: 18px;
             
@@ -161,7 +161,7 @@
   #PowMC {
     min-height: auto;
     
-    padding: 32px 16px;
+    padding: 0;
     
     align-items: flex-start;
     
@@ -179,35 +179,38 @@
           display: none;
         }
         
-        .slider {
+        .sliderEE{
           width: 100%;
+          height : 100%;
           
-          .track {
+          .trackEE{
             width: 100%;
-            
+            height : 100%;
             gap: 20px;
           }
           
-          .card {
+          .cardEE{
             width: 100%;
-            
-            flex-direction: column-reverse;
-            
+            min-height : auto;
+            height : 100%;
             align-items: flex-start;
             
-            padding: 18px;
+            padding: 30px;
             
             gap: 18px;
+            grid-template-columns : 1fr;
+            grid-template-rows : repeat(2, auto);
             
-            .text {
+            .textEE{
               width: 100%;
-              
+              height : 100%;
+              padding : 0;
               
             }
             
-            .image {
-              width: 120px;
-              
+            .imageEE{
+              width : 100%;
+              height : 100%;
               img {
                 border-radius: 16px;
               }
